--- a/site/views/home.ejs
+++ b/site/views/home.ejs
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Blog of <%= nickname %></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 	<link rel="stylesheet" href="css/site.css" />
 	<script type="text/javascript" src="js/site.js"></script>
 </head>
