--- a/site/views/home.html
+++ b/site/views/home.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Blog of <%= nickname %></title>
+	<title>Blog</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
-	<link rel="stylesheet" href="css/site.css" />
-	<script type="text/javascript" src="js/site.js"></script>
+	<link rel="stylesheet" href="../resources/css/font-awesome.min.css" />
+	<link rel="stylesheet" href="../resources/css/site.css" />
+	<script type="text/javascript" src="../resources/js/site.js"></script>
 </head>
 <body>
 	<header class="cf">
-		<h1><%= nickname %></h1>
+		<h1>Name Here</h1>
 		<nav class="cf">
 			<ul class="cf">
 				<li><a href="#"><i class="icn icn-link icn-home"></i>Home</a></li>
